syntax = "proto3";

option java_multiple_files = true;
option java_package = "pb.java.microservices.grpc.search.generatedProto";
package search;

service Search {
  rpc Nearby(NearbyRequest) returns (SearchResult);
}

message NearbyRequest {
  float lat = 1;
  float lon = 2;
  string inDate = 3;
  string outDate = 4;
}

message SearchResult {
  repeated string hotelIds = 1;
}