namespace Pb.Common.Models;

public class Address
{
    public string? StreetNumber { get; set; }

    public string? StreetName { get; set; }

    public string? City { get; set; }

    public string? State { get; set; }

    public string? Country { get; set; }

    public string? PostalCode { get; set; }

    public float? Lat { get; set; }

    public float? Lon { get; set; }
}
